--- a/Lecture_5/lecture_5/CMakeLists.txt
+++ b/Lecture_5/lecture_5/CMakeLists.txt
@@ -7,6 +7,9 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -30,6 +33,18 @@ install(
     rviz
   DESTINATION
     share/${PROJECT_NAME}/
+)
+
+###### Python Part #####
+# Install Python modules
+ament_python_install_package(${PROJECT_NAME})
+# Install Python executables
+install(
+  PROGRAMS
+    scripts/lane_following.py
+    scripts/my_py_node.py
+  DESTINATION 
+    lib/${PROJECT_NAME}
 )
 
 ament_package()
